# leaning-redis-imp

./: README.md  consumer.py  doc_mogo_local_setup.txt  main.py  pyproject.toml
app/: main.py
app/api/: user.py
app/config/: logging.py
app/db/: redis_client.py
app/models/: user.py
app/producer/: stream.py
app/services/: redis_service.py  user_service.py
